@@ -1,3 +1,9 @@
+2008-04-29  Richard Guenther  <rguenther@suse.de>
+
+	PR middle-end/36077
+	* fold-const.c (extract_muldiv_1): In combining division constants
+	make sure to never overflow.
+
 2008-04-28  Jakub Jelinek  <jakub@redhat.com>
 
 	PR debug/36060
